assets/style.css
:root {
  --bg-color: #00b184;
  --secondary-color: #f2f9f7;
  --text-color: #000000;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Poppins", sans-serif;
  scroll-behavior: smooth;
}

a {
  text-decoration: none;
}

/* Section 1 */
.hero {
  padding: 0 10%;
  height: 100vh;
  background: #f5f5f5;
  background-image: url("img/hero-bg-img.jpg");
  background-size: cover;
  background-position: center;
  position: relative;
  background-repeat: no-repeat;
  z-index: 1000;
}

.navbar {
  width: 100%;
  position: fixed !important;
  top: 0;
  left: 50%;
  transform: translateX(-50%);
  padding: 0 15%;
}
.nav-link {
  margin: 0 15px;
}
.nav-link:hover {
  background: var(--bg-color);
  color: #fff !important;
}

.hero nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 15px 20px;
  width: 100%;
}

.nav-links {
  display: flex;
  align-items: center;
}

.hero nav .menu ul {
  display: flex;
  list-style: none;
}
.button {
  background: var(--bg-color) !important;
  text-transform: uppercase;
  color: #fff !important;
}

/* Hero Content */
.hero-content {
  display: flex;
  align-items: center;
  width: 100%;
  height: 80%;
}

.hero-content .hero-content-container {
  display: flex;
  align-items: center;
  margin-top: 100px;
}

.hero-content .hero-text {
  display: flex;
  flex-direction: column;
}

.hero-content .hero-text h1 {
  font-size: 3rem;
  color: var(--text-color);
  margin-bottom: 20px;
  width: 100%;
  line-height: 1.2;
}

.hero-content .hero-text p {
  color: var(--text-color);
  font-size: 1.2rem;
  margin-bottom: 50px;
  width: 90%;
  line-height: 2;
}

.hero-content .hero-text .hero-button .button {
  text-decoration: none;
  text-transform: uppercase;
  color: #ffffff;
  background: var(--bg-color);
  padding: 10px 50px;
  border-radius: 5px;
  transition: 0.3s;
  font-weight: 600;
  margin-top: 20px;
}

.hero-content .hero-img {
  width: 100%;
  padding: 20px;
}

.hero-content .hero-img img {
  width: 100%;
}

/* Section 2: Services */
.services {
  padding: 0 10%;
  height: 150vh;
  position: relative;
  background-image: url("img/sec2-bg-img.jpg");
  background-size: cover;
  background-position: center;
}

.services .bg {
  position: absolute;
  top: -90px;
  left: 0;
  width: 100%;
  z-index: -1;
}

.services .services-text {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.services .services-text h1 {
  font-size: 3rem;
  color: var(--text-color);
  text-align: center;
  width: 90%;
  font-weight: 700;
  margin-bottom: 20px;
  margin-top: 270px;
}

.services .services-text .aim {
  color: var(--text-color);
  font-size: 1.1rem;
  text-align: center;
  font-weight: 700;
  margin-bottom: 20px;
}

.services .services-text p {
  color: var(--text-color);
  width: 60%;
  font-size: 1.1rem;
  text-align: center;
  margin-bottom: 20px;
}

.services .services-btn {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 20px;
}

.services .services-btn a {
  text-decoration: none;
  text-transform: uppercase;
  color: var(--text-color);
  background: #fff;
  text-align: center;
  padding: 8px 50px;
  font-weight: 600;
  border-radius: 5px;
}

.services-offers {
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  margin-top: 300px;
}

.services-offers .offers-card {
  width: 28%;
  height: 250px;
  padding: 20px;
  background: #fff;
  border-radius: 20px;
  transition: 0.3s;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  z-index: 1;
}
.services-offers .offers-card2 {
  width: 28%;
  height: 250px;
  padding: 20px;
  background: #fff;
  border-radius: 20px;
  transition: 0.3s;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  z-index: 1;
}
.services-offers .offers-card3 {
  width: 28%;
  height: 250px;
  padding: 20px;
  background: #fff;
  border-radius: 20px;
  transition: 0.3s;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  z-index: 1;
}

.services .services-offers .offers-card .offers-content {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 80%;
}
.services .services-offers .offers-card2 .offers-content {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 90%;
}
.services .services-offers .offers-card3 .offers-content {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
}

/* offers content 1 */
.services .services-offers .offers-card .offers-content .icon img {
  width: 70px;
}
.services .services-offers .offers-card .offers-content .title h1 {
  font-weight: 600;
  font-size: 1.2rem;
}
.services .services-offers .offers-card .offers-content .description p {
  text-align: center;
  line-height: 2;
}

/* offers content 2 */
.services .services-offers .offers-card2 .offers-content .icon img {
  width: 50px;
}
.services .services-offers .offers-card2 .offers-content .title h1 {
  font-weight: 600;
  font-size: 1.2rem;
}
.services .services-offers .offers-card2 .offers-content .description p {
  text-align: center;
  line-height: 2;
}

/* offers content 3 */
.services .services-offers .offers-card3 .offers-content .icon img {
  width: 70px;
}
.services .services-offers .offers-card3 .offers-content .title h1 {
  font-weight: 600;
  font-size: 1.2rem;
}
.services .services-offers .offers-card3 .offers-content .description p {
  text-align: center;
  line-height: 2;
}

/* Section 2 End */

/* Section 3 */
.reasons {
  padding: 0 10%;
  height: 150vh;
  position: relative;
  background-image: url("img/sec3-bg-img.jpg");
  background-size: cover;
  background-position: center;
}

.reasons .reasons_text {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
.reasons .reasons_text p {
  margin-top: 270px;
}
/* ... */

